--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -224,7 +224,7 @@ a:focus {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+  background: url(https://cloud.githubusercontent.com/assets/22103152/21071141/23e6a116-be4c-11e6-976d-1a5c5aabcc0a.png) no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
