--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -124,7 +124,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background-image: url("http://www.earthsciweek.org/sites/default/files/GMD/shutterstock_95584639_archaeological_excavation_Marques_resized.jpg") no-repeat bottom center scroll;
+  background-image: url"http://www.earthsciweek.org/sites/default/files/GMD/shutterstock_95584639_archaeological_excavation_Marques_resized.jpg"; no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
