--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -129,7 +129,7 @@ a {
     padding: 100px 0;
     text-align: center;
     color: white;
-"    background: url("http://www.earthsciweek.org/sites/default/files/GMD/shutterstock_95584639_archaeological_excavation_Marques_resized.jpg") no-repeat bottom center scroll;
+    background-image: url("http://www.earthsciweek.org/sites/default/files/GMD/shutterstock_95584639_archaeological_excavation_Marques_resized.jpg") no-repeat bottom center scroll;
     background-color: black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
