--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -227,8 +227,7 @@ a:focus {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background-image: url("https://cloud.githubusercontent.com/assets/22103152/21071141/23e6a116-be4c-11e6-976d-1a5c5aabcc0a.png") no-repeat center center scroll;
-  background-color: black;
+  background-image: url("http://www.earthsciweek.org/sites/default/files/GMD/shutterstock_95584639_archaeological_excavation_Marques_resized.jpg") no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
