--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -8,7 +8,7 @@ body {
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color: #70db70;
+  background-color: #00853C;
 }
 intro header {
   background-image: url("http://www.earthsciweek.org/sites/default/files/GMD/shutterstock_95584639_archaeological_excavation_Marques_resized.jpg");
