--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -6,7 +6,7 @@ body {
     height: 100%;
     font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: white;
-    background-color: #70db70;
+    background-color: #00853C  ;
 }
 
 html {
